# OSKengine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  DoxyfileAdvance  OSKengine.sln  README.md  _aa_bb_broad_collision_detector_8cpp_source.html  _aabb_aabb_detector_8h_source.html  _acceleration_structures_exceptions_8h.html  _acceleration_structures_exceptions_8h.js  _acceleration_structures_exceptions_8h_source.html  _anim_mesh_loader_8cpp.html  _anim_mesh_loader_8cpp.js  _anim_mesh_loader_8cpp_source.html  _anim_mesh_loader_8h.html  _anim_mesh_loader_8h.js  _anim_mesh_loader_8h_source.html  _animated_g_buffer_pass_8cpp.html  _animated_g_buffer_pass_8cpp_source.html  _animated_g_buffer_pass_8h.html  _animated_g_buffer_pass_8h.js  _animated_g_buffer_pass_8h_source.html  _animation_8cpp.html  _animation_8cpp_source.html  _animation_8h.html  _animation_8h.js  _animation_8h_source.html  _animation_channel_8h.html  _animation_channel_8h_source.html  _animation_exceptions_8h.html  _animation_exceptions_8h.js  _animation_exceptions_8h_source.html  _animation_sampler_8h.html  _animation_sampler_8h_source.html  _animation_skin_8cpp.html  _animation_skin_8cpp_source.html  _animation_skin_8h.html  _animation_skin_8h_source.html  (+12459 more)
Source/: AaBbBroadCollisionDetector.cpp  AabbAabbDetector.h  AnimMeshLoader.cpp  AnimMeshLoader.h  AnimatedGBufferPass.cpp  AnimatedGBufferPass.h  Animation.cpp  Animation.h  AnimationChannel.h  AnimationSampler.h  AnimationSkin.h  Animator.cpp  Animator.h  ApiCall.h  Assert.h  AssetLoaderJob.cpp  AssetLoaderJob.h  AssetLoaderNotFoundException.h  AssetManager.cpp  AssetManager.h  AssetOwningRef.h  AssetRef.h  AssetsMap.h  AtomicHolder.h  AudioApiAl.cpp  AudioApiAl.h  AudioAsset.h  AudioBuffer.h  AudioDeviceAl.cpp  AudioDeviceAl.h  AudioExceptions.h  AudioLoader.cpp  AudioLoader.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BillboardGBufferPass.cpp  BillboardGBufferPass.h  BinaryBlock.cpp  BinaryBlock.h  BinaryExceptions.h  (+758 more)
Source/.opencppcov/OSKengine2/: Release_x64.json
Source/Doc/: cubemap file.dox  font file.dox  irradiance map file.dox  json files.dox  material file v0.dox  material file v1.dox  material files.dox  model3d file.dox  prebuiltcollider file.dox  specular map file.dox  texture file.dox
Source/Resources/: .gitignore
Source/Resources/Assets/Audio/: bounce_audio.json
Source/Resources/Assets/BlueNoise/: bluenoise.json  bluenoisex.json
Source/Resources/Assets/Collision/: ball_collider.json  car_collider.json  circuit_colliders.json
Source/Resources/Assets/Curves/: circuit0.json
Source/Resources/Assets/Fonts/: font0.json  font1.json
Source/Resources/Assets/IBL/: irradiance0.json  specular0.json
Source/Resources/Assets/Models/: animmodel.json  circuit0.json  circuit0_billboards.json  circuit0_tree_normals.json  circuit0_trees.json  cube.json  f1.json  f1_low.json  mclaren.json  model0.json  ow.json  pista.json  player.json  sphere.json  wec.json
Source/Resources/Assets/Models/Colliders/: cube.json  sphere.json  sphere_low.json
Source/Resources/Assets/Skyboxes/: skybox0.json
Source/Resources/Assets/Textures/: button_texture.json  editor_icon.json  engine_icon.json  engine_logo.json  terrain0.json  texture0.json  wind_texture.json
Source/Resources/Icons/Editor/: SplineAsset.json
Source/Resources/Materials/2D/: sdf_material_2d_bindless.json
Source/Resources/Materials/2D/FrameCombiner/: fcombiner16.json  fcombiner8.json
Source/Resources/Materials/AssetsGen/: material_irradiance_convolution.json  material_irradiance_gen.json  material_specular_lut_gen.json  material_specular_prefilter.json
Source/Resources/Materials/Collision/: collision_material.json  collision_point_material.json  lowlevel_collision_material.json
Source/Resources/Materials/HybridRT/: shadows_reprojection.json
Source/Resources/Materials/PBR/Deferred/: deferred_gbuffer_billboard.json
Source/Resources/Materials/PBR/Deferred/Tree/: tree_gbuffer.json  tree_normals.json
Source/Resources/Materials/PBR/GpuDriven/: gdr_gbuffer.json
Source/Resources/Materials/PBR/Mesh/Grass/: grass_material.json
Source/Resources/Materials/PBR/TAA/: taa.json
Source/Resources/Materials/PostProcess/Bloom/: final.json  upscale.json
Source/Resources/Materials/PostProcess/HBAO/: hbao.json  resolve.json
Source/Resources/Materials/ShadowMapping/: material_shadows.json  material_shadows_optimized.json
Source/Resources/Materials/Testing/: min_compute.json  simple.json
Source/Resources/Scenes/: dev_scene.json
Source/Resources/Shaders/DX12/2D/: fragment.shader
Source/Resources/Shaders/DX12/Skybox/: fragment.hlsl  shader.hlsl  vertex.hlsl
Source/Resources/Shaders/DX12/Terrain/: compile.bat  control.hlsl  control.shader
Source/Resources/Shaders/VK/2D/: signed_distance_fields.glsl
Source/Resources/Shaders/VK/2D/2D/: frag.spv  shader.frag  shader.vert  vert.spv
Source/Resources/Shaders/VK/2D/FrameCombiner/: compile.bat  shader.comp  shader8.spv
Source/Resources/Shaders/VK/2D/RenderTarget/: frag.spv
Source/Resources/Shaders/VK/2D/SDF/: bindless.frag  bindless.vert  bindless_frag.spv  bindless_vert.spv  compile.bat
Source/Resources/Shaders/VK/AssetsGen/IrradianceGen/: frag.spv  shader.frag  shader.vert  vert.spv
Source/Resources/Shaders/VK/Colliders/: compile.bat  vert.spv
Source/Resources/Shaders/VK/Colliders/Points/: frag.spv
Source/Resources/Shaders/VK/Compute/: anmimated rt.comp  bloom_downscale.comp  bloom_downscale.spv  bloom_upscale.comp  comp.spv  shader.comp  shader.spv
Source/Resources/Shaders/VK/HybridRT/: compile.bat
Source/Resources/Shaders/VK/HybridRT/Common/: denoising.glsl
Source/Resources/Shaders/VK/HybridRT/Resolve/: resolve.comp
Source/Resources/Shaders/VK/Mesh/Grass/: compile.bat  frag.spv  mesh.mesh  mesh.spv  mesh.task  (+4 more)
Source/Resources/Shaders/VK/PBR/: Layout.txt  common.glsl  compile.bat
Source/Resources/Shaders/VK/PostProcess/: FXAA.spv  ToneMapping.spv
Source/Resources/Shaders/VK/Skybox/: vert.spv
Source/Resources/Shaders/VK/Testing/: compile.bat  simple_compute.comp  simple_compute.spv
(+12543 files in other folders)
